# visible-systems

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: windows-ci.yml
docs/: ARTIFACT_EVALUATION.md  AUTHORSHIP.md  REPLICATION_GUIDE.md  RESEARCH_DATA.md  getting-started.md  overview.md  pedagogy.md  research-methodology.md  windows-etw.md
labs/: BUILDINFO.md
labs/common/: bench.cpp  metrics_win.cpp  utils.cpp
labs/memory/access/: access_patterns_bench.cpp
labs/memory/allocation/: allocation_bench.cpp
labs/memory/layout/: aos_soa_bench.cpp
labs/memory/undefined-behaviour/: CMakeLists.txt  ub_demo.cpp
teaching/exercises/code-snippets/: aos_soa_examples.cpp
teaching/exercises/consent/: Participant Information Sheet.docx  ~$rticipant Information Sheet.docx
teaching/exercises/worksheets/: Worksheet 1 - Memory Layout and Performance.docx  Worksheet 2 - Memory Access Patterns.docx  Worksheet 3 - Undefined Behaviour.docx  ~$rksheet 3 - Undefined Behaviour.docx  ~WRL0035.tmp
teaching/guided-labs/: PLACEHOLDER.txt
tools/: plot_results.py  plot_results.txt
